# libargtable2

./: CMakeLists.txt  ChangeLog  Makefile  README  paatch.sh
include/sheitmann/: libargtable2.h
src/: CMakeLists.txt  arg_date.c  arg_dbl.c  arg_end.c  arg_file.c  arg_int.c  arg_lit.c  arg_rem.c  arg_rex.c  arg_str.c  arg_uint.c  argtable2.c  argtable2.def  argtable2.h  getopt.c  getopt1.c
